--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,19 @@
 {
   "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "builds": [
     {
-      "src": "server/index.ts",
+      "src": "server/**/*.ts",
       "use": "@vercel/node"
     },
     {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "src": "client/**/*",
+      "use": "@vercel/static"
     },
     {
-      "src": "admin/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "src": "admin/**/*",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -22,12 +22,19 @@
       "dest": "server/index.ts"
     },
     {
-      "src": "/admin/(.*)",
-      "dest": "admin/dist/$1"
+      "src": "/admin",
+      "dest": "admin/index.html"
     },
     {
-      "src": "/(.*)",
-      "dest": "client/dist/$1"
+      "src": "/admin/(.*)",
+      "dest": "admin/$1"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "/.*",
+      "dest": "client/index.html"
     }
   ]
 }
