--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
   "version": 2,
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
   "builds": [
     {
-      "src": "server/index.ts",
+      "src": "dist/index.js",
       "use": "@vercel/node"
     },
     {
@@ -19,7 +18,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server/index.ts"
+      "dest": "dist/index.js"
     },
     {
       "src": "/assets/(.*)",
@@ -33,6 +32,10 @@
     {
       "src": "^/favicon.ico",
       "dest": "/client/dist/favicon.ico"
+    },
+    {
+      "src": "^/static/(.*)",
+      "dest": "/client/dist/static/$1"
     },
     {
       "src": "/admin",
